traces/bug_326.txt
examples++-load/medit.cpp:308: error: DEAD_STORE
  The value written to &nbofsol (type int) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:308:5: Write of unused value
306.      
307.     
308.       nbofsol = l.size();
           ^
309.       for (size_t i=2;i<args.size();i++){
310.         size_t jj=i-2;
